fix navbar link font size bug on Mobile Safari orientation change

--- a/globals.sass
+++ b/globals.sass
@@ -54,6 +54,9 @@ a
   -webkit-font-smoothing: antialiased
   box-sizing: border-box
   -webkit-tap-highlight-color: transparent
+  // Mobile safari changes nav font size after device rotation but does not revert it back after user
+  // returns back to original orientation. https://stackoverflow.com/questions/2710764
+  -webkit-text-size-adjust: 100%
 
 img, svg
   vertical-align: middle
